@@ -124,7 +124,7 @@ export(alpha2kendall)
 export(alpha2spear)
 export(ascertained.pairs)
 export(back2timereg)
-export(baseplot.phreg)
+export(basehazplot.phreg)
 export(bicomprisk)
 export(binomial.twostage)
 export(binomial.twostage.time)
@@ -146,7 +146,9 @@ export(concordance.twostage)
 export(cor.cif)
 export(corsim.prostate)
 export(corsim.prostate.random)
+export(covfr)
 export(cumsumstrata)
+export(cumsumstratasum)
 export(daggr)
 export(daggregate)
 export(dby)
