@@ -30,8 +30,8 @@ tracesim <- sim.cox(out1,1000)
 sout1 <- phreg(Surv(time,status==1)~vf+chf+strata(wmicat.4),data=tracesim)
 
 par(mfrow=c(1,2))
-baseplot.phreg(out1)
-baseplot.phreg(sout1)
+basehazplot.phreg(out1)
+basehazplot.phreg(sout1)
 }
 \author{
 Klaus K. Holst, Thomas Scheike
