@@ -2,7 +2,9 @@
   - twinlm now supports ordinal outcomes
   - optimized strata calculations in phreg  
   - optimized robust standard errors in phreg  
-  - gof
+  - weights and offsets in phreg 
+  - gof of phreg with fast cumulative residuals Lin, Wei, Ying 
+  - graphical gof of phreg 
 
 * Version 1.2.2 <2017-03-18 Sat>
   - Vignettes updated
